# draw-rectangle-on-YUV

./: .gitignore  CMakeLists.txt  README.md  drawRectNV12.cpp  drawRectNV12.h  test.cpp  test_nv12.yuv
inc/: osdyuv.h
src/: osdyuv.cpp  test.cpp
